rough test of hardware input/output

--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
         "soft_start": 1000,
         "retry_delay": 200,
         "pwm_mode": 0,
-        "pin": "A0"
+        "output_pin": "D10",
+        "input_pin": "A0"
     },
     {
         "fuse_min": 0,
@@ -17,7 +18,8 @@
         "soft_start": 1000,
         "retry_delay": 200,
         "pwm_mode": 0,
-        "pin": "A1"
+        "output_pin": "D11",
+        "input_pin": "A1"
     },
     {
         "fuse_min": 0,
@@ -27,7 +29,8 @@
         "soft_start": 1000,
         "retry_delay": 200,
         "pwm_mode": 0,
-        "pin": "A2"
+        "output_pin": "D12",
+        "input_pin": "A2"
     },
     {
         "fuse_min": 0,
@@ -37,6 +40,7 @@
         "soft_start": 1000,
         "retry_delay": 200,
         "pwm_mode": 0,
-        "pin": "A3"
+        "output_pin": "D13",
+        "input_pin": "A3"
     }
 ]
